--- a/Thesis/Latex/Abbreviations.tex
+++ b/Thesis/Latex/Abbreviations.tex
@@ -20,4 +20,7 @@
 	\textbf{RNN}:& Recurrent Neural Network\\
 	\textbf{Seq2Seq}:& Sequence to Sequence\\
 	\textbf{T5}:& Text-to-Text Transfer Transformer\\
+	\textbf{SASRec}:&  Self-Attentive Sequential Recommendation\\
+	\textbf{TF-IDF}: & (Term Frequency-Inverse Document Frequency)\\
+	\textbf{QLM }:& (Query Likelihood Model)\\
 \end{tabular}
