--- a/Thesis/Latex/Abbreviations.tex
+++ b/Thesis/Latex/Abbreviations.tex
@@ -1,17 +1,18 @@
 \chapter*{List of Abbreviations }
 \pagestyle{fancy}\lhead{\textbf \footnotesize\it{List of Abbreviations}}
-\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2024}}}
+\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}}
 \pagestyle{fancy}\rhead{\textbf \footnotesize\it{}}
 \addcontentsline{toc}{chapter}{List of Abbreviations }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{tabular}{ll}
-
+    \textbf{LLM}:& Large Language Models \\
+    \textbf{RAG}:& Retrieval-Augmented Generation\\
+    \textbf{ANN}&  Artificial Neural Network \\
+    \textbf{GPT}: & Generative Pre-trained Transformer\\
 	\textbf{BERT}:& Bidirectional Encoder Representations from Transformers\\
-	\textbf{RAG} :& Retrieval-Augmented Generation\\
+	\textbf{T5}:& Text-to-Text Transfer Transformer\\
 	\textbf{FFN}:& Feed-Forward Network\\
-	\textbf{GPT}:& Generative Pre-trained Transformer\\
-	\textbf{LLM}:& Large Language Model\\
 	\textbf{LSTM}:& Long Short-Term Memory\\
 	\textbf{MT}:& Machine Translation\\
 	\textbf{NLG}:& Natural Language Generation\\
@@ -19,7 +20,6 @@
 	\textbf{NLU}:& Natural Language Understanding\\
 	\textbf{RNN}:& Recurrent Neural Network\\
 	\textbf{Seq2Seq}:& Sequence to Sequence\\
-	\textbf{T5}:& Text-to-Text Transfer Transformer\\
 	\textbf{SASRec}:&  Self-Attentive Sequential Recommendation\\
 	\textbf{TF-IDF}: & (Term Frequency-Inverse Document Frequency)\\
 	\textbf{QLM }:& (Query Likelihood Model)\\
