--- a/Thesis/Latex/Biblio.bib
+++ b/Thesis/Latex/Biblio.bib
@@ -32,6 +32,13 @@
 	journal={arXiv preprint arXiv:1406.1078},
 	year={2014}
 }
+@inproceedings{Ding2024,
+	title={Efficient Retrieval with Learned Similarities},
+	author={Bailu Ding and Jiaqi Zhai},
+	booktitle={THE WEB CONFERENCE 2025},
+	year={2025},
+	note = {\url{https://openreview.net/forum?id=eHF4pDRWjT}},
+}
 @misc{geeksforgeeks_lstm,
 	author       = {{GeeksforGeeks}},
 	title        = {Deep Learning - Introduction to Long Short Term Memory},
@@ -509,13 +516,7 @@ note={\url{https://arxiv.org/abs/2307.06435}},
 	address={New York, NY, USA},
 	series={KDD '23},
 }
-@inproceedings{Ding2024,
-title={Efficient Retrieval with Learned Similarities},
-author={Bailu Ding and Jiaqi Zhai},
-booktitle={THE WEB CONFERENCE 2025},
-year={2025},
-url={https://openreview.net/forum?id=eHF4pDRWjT},
-}
+
 @article{Roy2022,
 	author    = {Deepjyoti Roy and Mala Dutta},
 	title     = {A systematic review and research perspective on recommender systems},
@@ -530,13 +531,7 @@ url={https://openreview.net/forum?id=eHF4pDRWjT},
 	doi       = {10.1186/s40537-022-00592-5},
 	id        = {Roy2022}
 } 
-@misc{evidentlyai2025,
-	author       = {Evidently AI},
-	title        = {Ranking and Recommendation Metrics Guide: Precision and Recall at K in Ranking and Recommendations},
-	year         = {2025},
-	url          = {https://www.evidentlyai.com/ranking-metrics/precision-recall-at-k},
-	note         = {Last updated: January 9, 2025},
-}
+
 @article{WANG201110831,
 	title = {Application of context-aware and personalized recommendation to implement an adaptive ubiquitous learning system},
 	journal = {Expert Systems with Applications},
@@ -598,10 +593,4 @@ address   = "New York, NY, USA" }
 	url = {https://www.evidentlyai.com/ranking-metrics/mean-reciprocal-rank-mrr},
 	note ={ Last accessed: March 13, 2025}
 }
-@book{zhang2021recsys,
-	author    = {Shuai Zhang and Aston Zhang and Yi Tay},
-	title     = {Recommender Systems},
-	year      = {2021},
-	url       = {https://d2l.ai/chapter_recommender-systems/recsys-intro.html},
-	note      = {Accessed: March 13, 2025}
-}
+
