--- a/Thesis/Latex/Conclusion.tex
+++ b/Thesis/Latex/Conclusion.tex
@@ -1,14 +1,11 @@
-\chapter{Conclusion}
+\chapter*{Conclusion}
 \pagestyle{fancy}\lhead{\textbf \footnotesize\it{Conclusion}}
 \pagestyle{fancy}\chead{} \pagestyle{fancy}\rhead{}
-\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2024}}}
+\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}}
 \pagestyle{fancy}\cfoot{} \pagestyle{fancy}\rfoot{\thepage}
 %\addcontentsline{toc}{chapter}{General conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Summary}
-Here goes the conclusion.\\
-\section{Limitations}
-\section{Future work}
+General introduction
 %\newpage
 
 
