--- a/Thesis/Latex/Acknowledgements.tex
+++ b/Thesis/Latex/Acknowledgements.tex
@@ -2,5 +2,20 @@
 \thispagestyle{empty}
 %\addcontentsline{toc}{chapter}{Acknowledgments}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{center}
+	
+	
+	First of all, praise and thanks to Allah Almighty for giving us all the patience, courage, will and motivation that allowed us to accomplish this work.\\ 
+	\vspace{0.3cm}
+	
+	My deepest gratitude goes to my supervisor, \textbf{Mr Salem Mohamed } for his patient guidance, insightful feedback, and continuous encouragement throughout the course of this work .\\
+	\vspace{0.3cm}
+	I would like to acknowledge the members of the jury for their interest  \\
+	\vspace{0.3cm}
+    I am also especially thankful to my parents, family, and friends for their unwavering support, love, and motivation at every step of this journey. \\
+    \vspace{0.3cm}
+    I would like to thank everyone who helps me to improve my work. and who gave me any remark that helped me to perfect this manuscript.\\
+	\vspace{0.3cm}
+	All the teachers of the University MUSTAPHA STAMBOULI DE LA WILAYA MASCARA For the good contribution of this work.
+\end{center}
 
